fix about spacing on mobile

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -82,6 +82,7 @@ p {
 	}
 
 	.info-column {
+		padding-top: 15px;
 		font-size: 20px;
 		border-bottom: 1px solid black;
 		margin-bottom: 20px;
